--- a/src/css/common.css
+++ b/src/css/common.css
@@ -5,7 +5,7 @@ html, body, div, ul, li, h1, h2, h3, h4, h5, h6, p, dl, dt, dd, ol, form, input,
 }
 *{box-sizing: border-box;}
 html, body {
-    
+
     height: 100%;
     font-family: 'Avenir', Helvetica, Arial, sans-serif;
 }
@@ -18,6 +18,7 @@ body {
 h1, h2, h3, h4, h5, h6{font-weight:normal;}
 ul,ol {
     list-style: none;
+    padding: 0
 }
 
 img {
